--- a/xiaochengxu_1/app.json
+++ b/xiaochengxu_1/app.json
@@ -1,20 +1,45 @@
 {
   "pages": [
     "pages/index/index",
-    "pages/logs/index"
+    "pages/logs/logs",
+    "pages/login/login",
+    "pages/login/privacy",
+    "pages/schools/schools"
   ],
-  "window": {
-    "navigationBarTitleText": "Demo"
+  "window": {  
+    "navigationBarTitleText": "517驾校",
+    "navigationBarTextStyle": "white"
   },
   "tabBar": {
+    "color":"black",
+    "selectedColor":"#fa7127",
+    "backgroundColor":"white",
     "list": [
       {
         "pagePath": "pages/index/index",
+        "iconPath":"images/index_footer_nav01.png",
+        "selectedIconPath":"images/index_footer_nav01.png",
         "text": "首页"
       },
       {
         "pagePath": "pages/logs/logs",
-        "text": "日志"
+        "iconPath":"images/index_footer_nav02.png",
+        "text": "语言"
+      },
+      {
+        "pagePath": "pages/schools/schools",
+        "iconPath": "images/index_footer_nav03.png",
+        "text": "驾校"
+      },
+      {
+        "pagePath": "pages/logs/logs",
+        "iconPath": "images/index_footer_nav04.png",
+        "text": "百科"
+      },
+      {
+        "pagePath": "pages/login/login",
+        "iconPath": "images/index_footer_nav05.png",
+        "text": "我的"
       }
     ]
   },
